// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabsMenu tests should render empty state correctly 1`] = `
<div>
  <div
    class="pf-v5-c-menu pf-m-plain pf-m-scrollable"
    data-ouia-component-id="OUIA-Generated-Menu-1"
    data-ouia-component-type="PF5/Menu"
    data-ouia-safe="true"
  >
    <div
      class="pf-v5-c-menu__search"
    >
      <div
        class="pf-v5-c-menu__search-input pf-u-mx-sm"
      >
        <span
          class="pf-v5-c-form-control pf-m-icon"
        >
          <input
            aria-invalid="false"
            aria-label="Filter menu items"
            data-ouia-component-id="OUIA-Generated-TextInputBase-1"
            data-ouia-component-type="PF5/TextInput"
            data-ouia-safe="true"
            placeholder="Search services"
            type="search"
            value=""
          />
          <span
            class="pf-v5-c-form-control__utilities"
          >
            <span
              class="pf-v5-c-form-control__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                />
              </svg>
            </span>
          </span>
        </span>
      </div>
    </div>
    <hr
      class="pf-v5-c-divider"
    />
    <div
      class="pf-v5-c-menu__content"
      id="notifications-menu-content"
    >
      <div
        class="pf-v5-c-empty-state pf-m-sm pf-u-mt-lg"
      >
        <div
          class="pf-v5-c-empty-state__content"
        >
          <div
            class="pf-v5-c-empty-state__header"
          >
            <div
              class="pf-v5-c-empty-state__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                />
              </svg>
            </div>
            <div
              class="pf-v5-c-empty-state__title"
            >
              <h4
                class="pf-v5-c-empty-state__title-text"
              >
                No matching services found
              </h4>
            </div>
          </div>
          <div
            class="pf-v5-c-empty-state__body"
          >
            Adjust your filters and try again.
          </div>
          <div
            class="pf-v5-c-empty-state__footer"
          >
            <button
              aria-disabled="false"
              class="pf-v5-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-1"
              data-ouia-component-type="PF5/Button"
              data-ouia-safe="true"
              type="button"
            >
              Clear filters
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TabsMenu tests should render nav correctly 1`] = `
<div>
  <div
    class="pf-v5-c-menu pf-m-plain pf-m-scrollable"
    data-ouia-component-id="OUIA-Generated-Menu-3"
    data-ouia-component-type="PF5/Menu"
    data-ouia-safe="true"
  >
    <div
      class="pf-v5-c-menu__search"
    >
      <div
        class="pf-v5-c-menu__search-input pf-u-mx-sm"
      >
        <span
          class="pf-v5-c-form-control pf-m-icon"
        >
          <input
            aria-invalid="false"
            aria-label="Filter menu items"
            data-ouia-component-id="OUIA-Generated-TextInputBase-3"
            data-ouia-component-type="PF5/TextInput"
            data-ouia-safe="true"
            placeholder="Search services"
            type="search"
            value=""
          />
          <span
            class="pf-v5-c-form-control__utilities"
          >
            <span
              class="pf-v5-c-form-control__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v5-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                />
              </svg>
            </span>
          </span>
        </span>
      </div>
    </div>
    <hr
      class="pf-v5-c-divider"
    />
    <div
      class="pf-v5-c-menu__content"
      id="notifications-menu-content"
    >
      <section
        class="pf-v5-c-menu__group pf-u-px-sm"
      >
        <h1
          class="pf-v5-c-menu__group-title"
        >
          Red Hat Enterprise Linux
        </h1>
        <ul
          class="pf-v5-c-menu__list"
          role="menu"
        >
          <li
            class="pf-v5-c-menu__list-item"
            role="none"
          >
            <button
              class="pf-v5-c-menu__item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              <span
                class="pf-v5-c-menu__item-main"
              >
                <span
                  class="pf-v5-c-menu__item-text"
                >
                  Advisor
                </span>
              </span>
            </button>
          </li>
        </ul>
      </section>
    </div>
  </div>
</div>
`;
